@@ -649,3 +649,7 @@
 2012-09-27  Flavio Ceolin
 
 	* edje_codegen: adding support for draggable
+
+2012-10-10
+
+	* edje_entry: Add more tags(preedit_sub1~4) for a variety of preediting states.
